apps/gatus/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: gatus
    name: gatus
  name: gatus
spec:
  finalizers:
    - kubernetes
