apps/gatus/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus-monitor
  namespace: gatus
spec:
  hostnames:
  - monitor.clusterian.pw
  parentRefs:
  - name: shared-gateway
    namespace: envoy-gateway-system
    sectionName: monitor-http
  rules:
  - backendRefs:
    - name: gatus
      port: 80
